# devcontainer-kafka

./: .gitignore  .pre-commit-config.yaml  README.md  notebook_producer.ipynb  notebook_receiver.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  initialize.sh
.devcontainer/poetry-devcontainer/: Dockerfile
src/devcontainer_kafka/: config.py  consumer.py  model.py  producer.py
tests/: test_kafka.py
